# cpp_examples

./: openSsl.txt  sqlite3.txt
Client/SocketClient/: CMakeLists.txt  Client.cpp  Client.h
Client/TestClientLib/: CMakeLists.txt
Client/TestClientLib/src/: Client.h  Main.cpp  Port.cpp
MessageQueuesPosix/MessageQueuesPosixClient/: CMakeLists.txt
MessageQueuesPosix/MessageQueuesPosixClient/src/: main.cpp
MessageQueuesPosix/MessageQueuesPosixServer/: CMakeLists.txt
MessageQueuesPosix/MessageQueuesPosixServer/src/: main.cpp
Scanner/: CMakeLists.txt  main.cpp
SocketClient/: CMakeLists.txt  Client.cpp  Client.h
Task/: CMakeLists.txt
Task/src/: TPool.cpp  TPool.h  callback.cpp  main.cpp  promise.cpp
Task2/: .gitignore  CMakeLists.txt  main.cpp
Task2/src/: CMakeLists.txt
Task2/src/task/: notification_queue.hpp  task_system.hpp
TestSharedLib/: CMakeLists.txt
TestSharedLib/src/: example.h
Timer/: CMakeLists.txt
Timer/src/: Timer.cpp  Timer.h  main.cpp
lib/TestLibAdd/: CMakeLists.txt
lib/TestLibAdd/src/: Main.cpp  MyStaticLibrary.h
lib/TestSharedLib/: CMakeLists.txt
lib/TestSharedLib/src/: Main.cpp
lib/libShared/: example.cpp
lib/libStatic/: MyStaticLibrary.cpp
libShared/: CMakeLists.txt
libStatic/: CMakeLists.txt
server_client/Client/: CMakeLists.txt
server_client/Client/src/: client.cpp  client.h  main.cpp
server_client/Server/: CMakeLists.txt
server_client/Server/src/: main.cpp  server.cpp  server.h
